log
Thu Mar 26 07:04:56 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
3b95f6f
Thu Mar 26 07:07:46 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
2121d3a
Thu Mar 26 07:18:18 PM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:31: error: expected ‘;’ before ‘}’ token
   50 |     return list->current->data
      |                               ^
      |                               ;
   51 | }
      | ~                              
aaf7cbd
Thu Mar 26 07:18:36 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
55c3802
Thu Mar 26 07:19:08 PM UTC 2026: 
 tests:  0|0
aceb476
Thu Mar 26 07:20:43 PM UTC 2026: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
3c3997d
